add: realized registration of user
